# ocr4rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/ocr4rs-cli/: Cargo.toml
crates/ocr4rs-cli/src/: main.rs
crates/ocr4rs-core/: Cargo.toml
crates/ocr4rs-core/src/: engine.rs  error.rs  lib.rs  pipeline.rs
crates/ocr4rs-pdf/: Cargo.toml
crates/ocr4rs-pdf/src/: lib.rs
crates/ocr4rs-prep/: Cargo.toml
crates/ocr4rs-prep/src/: lib.rs
crates/ocr4rs-server/: Cargo.toml
crates/ocr4rs-server/src/: lib.rs
scripts/: get-models.sh
