[package]
name = "ocr4rs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI de OCR4RS."
authors.workspace = true

[[bin]]
name = "ocr4rs"
path = "src/main.rs"

[dependencies]
ocr4rs-core = { workspace = true }
ocr4rs-server = { workspace = true }
image = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
