[package]
name = "ocr4rs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Núcleo de OCR4RS: motor de OCR puro Rust (ocrs/rten) — imagen → texto + líneas."
authors.workspace = true

[dependencies]
ocrs = { workspace = true }
rten = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
