[package]
name = "ocr4rs-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Extracción del ráster embebido en PDF escaneado (lopdf) — Rust puro, no renderiza vectores."
authors.workspace = true

[dependencies]
image = { workspace = true }
lopdf = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
