[package]
name = "ocr4rs-prep"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pre-proceso de imagen de OCR4RS (grises, normalizar, deskew, denoise, binarizar) — Rust puro, sin modelos."
authors.workspace = true

[dependencies]
image = { workspace = true }
imageproc = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
